--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,9 @@
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.devwork.fritzcontact"
-      android:versionCode="2"
-      android:versionName="1.0r1">
+      android:installLocation="preferExternal"
+      android:versionCode="3"
+      android:versionName="1.1">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".ProcessActivity" android:label="@string/app_name"/>
         <activity android:name=".InitialActivity" android:label="@string/app_name">
@@ -56,6 +57,6 @@
 <uses-permission android:name="android.permission.READ_CONTACTS" />
 <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"/>
+<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
 
 </manifest> 
